# rust-atelier

./: .gitignore  01-premiers-pas.rs  02-bonjour-toi.rs  03-addition.rs  04-nombres.rs  05-formatteur.rs  06-somme.rs  07-struct-point-copy.rs  07-struct-point.rs  08-borrowing.rs  09-options.rs  10-lifetime-basics.rs  11-lifetime-advanced.rs  13-borrow-me-if-you-can.rs  15-shared-counter.rs  CHANGELOG.md  README.md  hello-you.rs  install.sh
08-plusmoins/: Cargo.toml
08-plusmoins/src/: main.rs
12-guess-the-number-web-edition/: Cargo.toml  README.md
12-guess-the-number-web-edition/src/: main.rs
16-ffi-python/: Cargo.toml  README.md  build-wheel.sh  setup.py
16-ffi-python/src/: lib.rs
PaintDroid/: Cargo.toml  Readme.md
PaintDroid/src/: main.rs
cours/: 01_bases_rust.md  bases_rust.md  bibliographie.md  readme.md
exercices/: 01-premiers-pas.rs  02-bonjour-toi.rs  03-addition.rs  04-nombres.rs  05-formateurs.rs  06-if_expressions.rs  07-somme.rs  08-struct-point-move.rs  09-struct-point-copy.rs  10-options.rs  11-lifetime-advanced.rs  12-lifetime-basics-borrow.rs  13-borrow-me-if-you-can.rs  14-match-me.rs  15-shared-counter.rs
notes/: memo_rust.md
sujets/: 00_qcm_rust.tex  02_qcm_rust.tex  2019_qcm_rust.tex  2022-exam-blanc.tex  2022-exam2.tex  2022-rattrapage.tex  README.md
travaux_pratiques/01-plusOuMoins/: README.md
travaux_pratiques/01-plusOuMoins/src/: main.rs
travaux_pratiques/02-calculator/: Cargo.toml  Readme.md
travaux_pratiques/02-calculator/src/: main.rs
