[package]
name = "guess-the-number-web-edition"
version = "0.1.0"
authors = ["TonPrenom TonNom | Pseudonyme <Toi@tonSuperDomaine.tld>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

# Vous pouvez utiliser au choix soit :
# - [Nickel](https://nickel-org.github.io/getting-started.html)
# https://github.com/gotham-rs/gotham
# - [gotham](https://gotham.rs/#pills-routing)
# https://github.com/nickel-org/nickel.rs

# nickel = "*"
# gotham = "*"
